BinhBH: Sua lai giao dien searchBar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="home">Trang chủ</string>
     <string name="category">Danh mục</string>
     <string name="cart">Giỏ hàng</string>
+    <string name="notification">Thông báo</string>
 </resources>
