--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="category">Danh mục</string>
     <string name="cart">Giỏ hàng</string>
     <string name="notification">Thông báo</string>
+    <string name="suggestion">Gợi ý</string>
 </resources>
