BinhBH: Them Danh sach danh muc hang

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="cart">Giỏ hàng</string>
     <string name="notification">Thông báo</string>
     <string name="suggestion">Gợi ý</string>
+    <string name="all_cate">Tất cả các danh mục</string>
 </resources>
